src/test/ui/consts/const-eval/issue-44578.nll.stderr
error[E0080]: evaluation of constant expression failed
  --> $DIR/issue-44578.rs:35:14
   |
LL |     println!("{}", <Bar<u16, u8> as Foo>::AMT);
   |              ^^^^  -------------------------- referenced constant has errors

error[E0080]: evaluation of constant expression failed
  --> $DIR/issue-44578.rs:35:20
   |
LL |     println!("{}", <Bar<u16, u8> as Foo>::AMT);
   |                    ^^^^^^^^^^^^^^^^^^^^^^^^^^ referenced constant has errors

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0080`.
